; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCanOpenVpnOverIcmpPort.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Server.c_SiCanOpenVpnOverIcmpPort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IP_PROTO_ICMPV4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SiCanOpenVpnOverIcmpPort() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @IP_PROTO_ICMPV4, align 4
  %4 = call i32 @MAKE_SPECIAL_PORT(i32 %3)
  %5 = call i32* @NewUDP(i32 %4)
  store i32* %5, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

9:                                                ; preds = %0
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @Disconnect(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @ReleaseSock(i32* %12)
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32* @NewUDP(i32) #1

declare dso_local i32 @MAKE_SPECIAL_PORT(i32) #1

declare dso_local i32 @Disconnect(i32*) #1

declare dso_local i32 @ReleaseSock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
